adding kernel ridge, not finished yet

--- a/Signal_Construction/Signal_testing.ipynb
+++ b/Signal_Construction/Signal_testing.ipynb
@@ -13,8 +13,6 @@
     "### 2. Multivariate Strategies\n",
     "   \n",
     "### 3. NN-based methodologies\n",
-    "   * LSTM\n",
-    "   * other?\n",
     "   \n",
     "### 4. Others? (eg. from academic literature)"
    ]
@@ -28,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-16T17:47:57.729562Z",
-     "start_time": "2022-01-16T17:47:56.896229Z"
+     "end_time": "2022-01-25T18:00:09.465368Z",
+     "start_time": "2022-01-25T18:00:09.452403Z"
     }
    },
    "outputs": [],
@@ -41,7 +39,13 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
-    "import statsmodels.tsa"
+    "import statsmodels as sm\n",
+    "from sklearn.model_selection import *\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.decomposition import *\n",
+    "from sklearn.kernel_ridge import *\n",
+    "import math\n",
+    "import scipy\n"
    ]
   },
   {
@@ -53,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-16T17:18:32.137469Z",
-     "start_time": "2022-01-16T17:18:31.563160Z"
+     "end_time": "2022-01-25T17:59:30.882286Z",
+     "start_time": "2022-01-25T17:59:30.147987Z"
     }
    },
    "outputs": [],
@@ -74,11 +78,11 @@
     "# Univariate strategies\n",
     "* Simple strategies\n",
     "    + moving average\n",
-    "    + MACD\n",
+    "    + MACD -> DONE\n",
     "* forecasting strategies (requires cross-validation procedure)\n",
-    "    + AR\n",
-    "    + MA\n",
-    "    + auto_arima"
+    "    + ARMA\n",
+    "    + KRR -> IN PROGRESS\n",
+    "    + Ornstein-Uhlenbeck"
    ]
   },
   {
@@ -142,8 +146,81 @@
     "        signals['signal_{}'.format(i)] = macd(returns.iloc[:,i],long,short,signal_span)\n",
     "    signals.index = returns.index\n",
     "    return signals\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# auto ARIMA\n",
+    "\n",
+    "# Orstein-Uhlenbeck function (mean reversion)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-25T20:50:14.596Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# kernel ridge\n",
+    "def krr(data,window_size=30):\n",
+    "    n = len(data)-1\n",
+    "    predicted_values = np.zeros(n-window_size)\n",
+    "    \n",
+    "    # rolling window\n",
+    "    for i in range(window_size,n):\n",
+    "        #if i % 100 == 0:\n",
+    "        #    print(i)\n",
     "        \n",
-    "\n"
+    "        list_x = np.array(data.iloc[(i-window_size):i]).reshape(-1,1)\n",
+    "        list_y = np.array(data.iloc[(i-window_size+1):(i+1)]) \n",
+    "        list_x_pred = np.array(data.iloc[i+1]).reshape(-1,1)\n",
+    "        \n",
+    "        parameters = {'kernel':['rbf'], 'alpha':np.arange(0.001,6,1).tolist(),'degree':np.arange(0.001,6,1).tolist()}\n",
+    "        clf = GridSearchCV(KernelRidge(), parameters)\n",
+    "        clf = clf.fit(list_x,list_y)\n",
+    "        pred = clf.predict(list_x_pred)\n",
+    "        predicted_values[i-window_size] = pred\n",
+    "\n",
+    "    return predicted_values\n",
+    "\n",
+    "pr = krr(data[:,1])\n",
+    "pr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-25T20:50:17.479Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# performance of krr is aweful\n",
+    "%matplotlib widget\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "ax.plot(data.index[:(len(data)-wdw-1)],pr, label = 'pr', color = 'r')\n",
+    "ax2 = ax.twinx()\n",
+    "ax2.plot(data.index[:(len(data)-wdw-1)],data.iloc[1:(len(data)-wdw),1], label = 'real', color = 'b')\n",
+    "ax.legend(loc=0)\n",
+    "#ax2.legend(loc=0)\n",
+    "ax.grid()\n",
+    "ax.set_xlabel(\"index\")\n",
+    "ax.set_ylabel(\"real\")\n",
+    "ax2.set_ylabel(\"pred\")\n",
+    "plt.show()\n",
+    "print()"
    ]
   },
   {
@@ -401,7 +478,7 @@
     "macd_single = macd(stock, 26,12,9,)\n",
     "macd_multiple = macd_signals(data.iloc[:,:10],26,12,9)\n",
     "\n",
-    "# 2. test ma\n"
+    "# 2. test others ...."
    ]
   },
   {
@@ -427,6 +504,7 @@
    "source": [
     "# NN-based methodologies\n",
     "   * LSTM\n",
+    "   * CNN\n",
     "   * other?"
    ]
   },
