--- a/Signal_Construction/Signal_testing.ipynb
+++ b/Signal_Construction/Signal_testing.ipynb
@@ -26,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-25T18:00:09.465368Z",
-     "start_time": "2022-01-25T18:00:09.452403Z"
+     "end_time": "2022-01-26T09:42:06.073249Z",
+     "start_time": "2022-01-26T09:42:04.458357Z"
     }
    },
    "outputs": [],
@@ -57,11 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-25T17:59:30.882286Z",
-     "start_time": "2022-01-25T17:59:30.147987Z"
+     "end_time": "2022-01-26T09:42:07.532144Z",
+     "start_time": "2022-01-26T09:42:06.934686Z"
     }
    },
    "outputs": [],
@@ -87,11 +87,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-16T17:38:27.017341Z",
-     "start_time": "2022-01-16T17:38:26.987212Z"
+     "end_time": "2022-01-26T09:42:09.973661Z",
+     "start_time": "2022-01-26T09:42:09.953753Z"
     }
    },
    "outputs": [],
@@ -151,8 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-26T09:42:11.488669Z",
+     "start_time": "2022-01-26T09:42:11.474669Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# auto ARIMA\n",
@@ -165,7 +170,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-01-25T20:50:14.596Z"
+     "start_time": "2022-01-26T09:42:56.551Z"
     }
    },
    "outputs": [],
@@ -192,8 +197,7 @@
     "\n",
     "    return predicted_values\n",
     "\n",
-    "pr = krr(data[:,1])\n",
-    "pr"
+    "pr = krr(data.iloc[:,1])"
    ]
   },
   {
@@ -201,7 +205,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-01-25T20:50:17.479Z"
+     "start_time": "2022-01-26T09:43:13.026Z"
     }
    },
    "outputs": [],
