convergence data for plcca analysis

--- a/Code/convergence/notebooks/convergence_analysis.ipynb
+++ b/Code/convergence/notebooks/convergence_analysis.ipynb
@@ -1002,7 +1002,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-06-29T15:35:19.532Z"
+     "start_time": "2022-06-30T07:04:55.073Z"
     }
    },
    "outputs": [
@@ -1010,12 +1010,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(100, 10)\n"
+      "(100, 1000)\n",
+      "(50, 10)\n",
+      "(50, 100)\n"
      ]
     }
    ],
    "source": [
-    "for comb in combinations:\n",
+    "for comb in combinations[2:]:\n",
     "    # print to see where we're at\n",
     "    print(comb)\n",
     "    output = pd.DataFrame(columns=[\"sample_size\",\"kernel\",\"weights\",\"cor\",\"res\",\"time_outer\",\"time_w\",\"time_e\"])\n",
@@ -1263,137 +1265,6 @@
     "    print(\"Time: %s seconds\" % str(round(time.time() - start_time)))\n",
     "    return portfolio_weights"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 5. Proposed: CCA with NO weight constraints"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\\begin{align}\n",
-    "    \\mathbf{w}_t &= \\gamma \\mathbf{\\Sigma}^{-1}_{r}  \\mathbf{\\Sigma}_{rx} \\mathbf{\\Sigma}^{-1}_{x}  \\mathbf{x}_t \\\\\n",
-    "        \\text{where }\\gamma &= \\frac{\\mathcal{G}}{\\mathsf{Tr}(\\mathbf{\\Sigma}_{rx} \\mathbf{\\Sigma}_{x}^{-1} \\mathbf{\\Sigma}_{rx}' \\mathbf{\\Sigma}_{r}^{-1})}\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T10:37:18.970465Z",
-     "start_time": "2022-06-24T10:37:18.861719Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "cov_models = ['sample', 'ls', 'nls']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-06-24T10:37:19.930Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "w_cca = simulate_backtest(cov_models, \n",
-    "                          ret, \n",
-    "                          signal['reversion'], \n",
-    "                          n_lag=0, \n",
-    "                          Tcov=250,\n",
-    "                          rebalance='1B',\n",
-    "                          option='cca',\n",
-    "                          option2='id') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-06-24T10:37:33.250Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# build P&L\n",
-    "pnl_results = dict()\n",
-    "ptf_ret = dict()\n",
-    "for model in cov_models:\n",
-    "    portfolio =  Portfolio(prices=prices.loc[w_cca[model].index], position=w_cca[model], period=0)\n",
-    "    ptf_ret[model] = portfolio.profit.to_frame(name=\"Profit\")\n",
-    "    pnl_results[model] = portfolio.nav().to_frame(name=\"NAV\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-06-24T10:37:33.739Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "build_table2(cov_models, ptf_ret)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-06-24T10:37:34.836Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "build_table3(cov_models, w_cca, ptf_ret)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-06-24T10:37:35.639Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plotting(pnl_results, cov_models)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
