minor modifications in incremental complexity

--- a/Code/kernels/notebooks/Incremental Complexity.ipynb
+++ b/Code/kernels/notebooks/Incremental Complexity.ipynb
@@ -3945,6 +3945,9 @@
       "OPTIMIZING FOR MODELS: sample\n",
       "Time: 5166 seconds\n",
       "signal : mtm\n",
+      "OPTIMIZING FOR MODELS: sample\n",
+      "Time: 7727 seconds\n",
+      "signal : mcd\n",
       "OPTIMIZING FOR MODELS: sample\n"
      ]
     }
