addition of some papers and computational progress in incremental complexity computation

--- a/Code/kernels/notebooks/Incremental Complexity.ipynb
+++ b/Code/kernels/notebooks/Incremental Complexity.ipynb
@@ -3223,7 +3223,7 @@
     "                \n",
     "                continue\n",
     "\n",
-    "    for i,key in enumerate(w_diag):\n",
+    "    for k,key in enumerate(w_diag):\n",
     "        for cov in list_cov:\n",
     "            pr = prices.iloc[:,:w_diag[key][\"sample\"].shape[1]]\n",
     "            portfolio =  Portfolio(prices=pr.loc[w_diag[key][cov].index], position=w_diag[key][cov],period=0)\n",
@@ -3948,6 +3948,21 @@
       "OPTIMIZING FOR MODELS: sample\n",
       "Time: 7727 seconds\n",
       "signal : mcd\n",
+      "OPTIMIZING FOR MODELS: sample\n",
+      "Time: 9957 seconds\n",
+      "signal : mean_rev\n",
+      "OPTIMIZING FOR MODELS: sample\n",
+      "Time: 4572 seconds\n",
+      "signal : rev\n",
+      "OPTIMIZING FOR MODELS: sample\n",
+      "Time: 29898 seconds\n",
+      "signal : pfrevers\n",
+      "OPTIMIZING FOR MODELS: sample\n",
+      "Time: 4731 seconds\n",
+      "signal : prs\n",
+      "OPTIMIZING FOR MODELS: sample\n",
+      "Time: 3847 seconds\n",
+      "signal : rff\n",
       "OPTIMIZING FOR MODELS: sample\n"
      ]
     }
@@ -4219,7 +4234,7 @@
     "    \n",
     "    if ret.shape[1] >= 10:\n",
     "        #multivariate mean reversion\n",
-    "        #pfrevers = pf_mean_reversion(ret, N=0.1).fillna(0)\n",
+    "        pfrevers = pf_mean_reversion(ret, N=0.1).fillna(0)\n",
     "    \n",
     "        # pairs trading\n",
     "        prs = pairs_signals(ret, window=60).fillna(0)\n",
